<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:iconTint="#000000"
        android:title="Add"
        android:tooltipText="Add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="?android:attr/listChoiceIndicatorMultiple"
        android:title="Home"
        android:tooltipText="Home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:iconTint="#000000"
        android:title="Profile"
        android:tooltipText=""
        app:showAsAction="always" />
</menu>